deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dataspace-ica-api
  labels:
    app: dataspace-ica-api
spec:
  type: LoadBalancer
  selector:
    app: dataspace-ica-api
  ports:
    - name: http
      port: 80
      targetPort: 3310
